[gd_scene load_steps=2 format=3 uid="uid://c8x7k2m5n9p1"]

[ext_resource type="Script" path="res://LanguageSelection.gd" id="1_script"]

[node name="LanguageSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Select Language / 选择语言"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BtnZH" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "简体中文"

[node name="BtnEN" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "English"

[connection signal="pressed" from="VBoxContainer/BtnZH" to="." method="_on_btn_zh_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnEN" to="." method="_on_btn_en_pressed"]
